bug: better reposition drpodown on mobile

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -658,7 +658,7 @@ footer {
     padding-left: 3em;
   }
   .multi-dropdown__dropdown{
-    margin-left: -14em;
+    margin-left: -10.8em;
   }
   
 }
